Several further improvements in notebooks

--- a/notebooks/nb_20_IntroductionToControl.ipynb
+++ b/notebooks/nb_20_IntroductionToControl.ipynb
@@ -118,7 +118,7 @@
     }
    },
    "source": [
-    "# Introduction\n",
+    "# Introduction to Control\n",
     "\n",
     "Control theory is a field of control engineering and applied mathematics that deals with the control of dynamical systems in engineered processes and machines. The objective is to develop a model or algorithm governing the application of system inputs to drive the system to a desired state, while minimizing any delay, overshoot, or steady-state error and ensuring a level of control stability; often with the aim to achieve a degree of optimality. "
    ]
@@ -446,7 +446,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -3891,7 +3890,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false,
     "slideshow": {
      "slide_type": "subslide"
     }
