--- a/notebooks/nb_30_ControlAndPlanning.ipynb
+++ b/notebooks/nb_30_ControlAndPlanning.ipynb
@@ -126,7 +126,7 @@
     }
    },
    "source": [
-    "# Introduction\n",
+    "# Control and Planning\n",
     "\n",
     "In previous sections, we have designed feedback controllers for various systems with the goal of regulating the system output to a desired setpoint. Specifically, we utilized Fullstate Feedback and PID controllers. While these simple controllers can effectively regulate many systems, they have limitations that prevent high performance control for more complex systems.\n",
     "\n",
@@ -1542,7 +1542,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -2166,7 +2165,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false,
     "slideshow": {
      "slide_type": "subslide"
     },
@@ -3234,7 +3232,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false,
     "slideshow": {
      "slide_type": "subslide"
     },
