--- a/notebooks/nb_40_RecentDevelopmentsInControl.ipynb
+++ b/notebooks/nb_40_RecentDevelopmentsInControl.ipynb
@@ -111,7 +111,7 @@
     }
    },
    "source": [
-    "# Introduction\n",
+    "# Recent Developments in Control Theory\n",
     "\n",
     "- So far we have focused on deterministic systems with no noise or disturbances.\n",
     "- In this part of the training, we will focus on stochastic systems and how MPC can be used to handle such systems.\n",
@@ -791,7 +791,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -949,7 +948,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false,
     "slideshow": {
      "slide_type": "subslide"
     }
