--- a/notebooks/nb_992_Offline_rl_algorithms_II.ipynb
+++ b/notebooks/nb_992_Offline_rl_algorithms_II.ipynb
@@ -3,12 +3,251 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "%matplotlib inline\n",
+    "%load_ext training_rl"
+   ],
    "metadata": {
-    "ExecuteTime": {
-     "start_time": "2023-11-24T16:32:17.063655Z",
-     "end_time": "2023-11-24T16:32:18.882627Z"
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>/*\n",
+       "This file is mainly copy-pasta from rise's examples\n",
+       "https://github.com/damianavila/RISE/blob/master/examples/rise.css\n",
+       "that was further customized for appliedAI purposes\n",
+       "*/\n",
+       "@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400&display=swap');\n",
+       "\n",
+       "\n",
+       "/*\n",
+       "body {\n",
+       "    font-family: 'Work Sans', sans-serif !important;\n",
+       "    text-transform: initial !important;\n",
+       "    letter-spacing: initial !important;\n",
+       "    font-weight: 400 !important;\n",
+       "    line-height: 1.5 !important;\n",
+       "    text-size-adjust: 100% !important;\n",
+       "    ‑webkit‑text‑size‑adjust: 100% !important;\n",
+       "}\n",
+       "\n",
+       "\n",
+       ".reveal, div.text_cell_render, .md-slide, .sidebar-wrapper {\n",
+       "    font-size: 1.5rem !important;\n",
+       "}\n",
+       "*/\n",
+       "\n",
+       ".navbar-default .navbar-nav > li > a {\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       ".filename {\n",
+       "    font-size: 2.4rem !important;\n",
+       "    color: #212529 !important;\n",
+       "    font-weight: 600 !important;\n",
+       "}\n",
+       "\n",
+       ".reveal, .md-slide {\n",
+       "    color: white !important;\n",
+       "}\n",
+       "\n",
+       "h1, h2 {\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       "h3, h4, h5, h6 {\n",
+       "    color: #808080 !important;\n",
+       "}\n",
+       "\n",
+       ".reveal p, .reveal ol, .reveal dl, .reveal ul,\n",
+       "div.text_cell_render {\n",
+       "    color: #212529 !important;\n",
+       "}\n",
+       "\n",
+       "/*copied from stackoverflow, better spacing between list items*/\n",
+       "li + li {\n",
+       "  margin-top: 0.2em;\n",
+       "}\n",
+       "\n",
+       "body.rise-enabled .reveal ol, body.rise-enabled .reveal dl, body.rise-enabled .reveal ul {\n",
+       "    margin-left: 0.1em;\n",
+       "    margin-top: 0.2em;\n",
+       "}\n",
+       "\n",
+       ".reveal .rendered_html h1:first-child,\n",
+       ".reveal .rendered_html h2:first-child,\n",
+       ".reveal .rendered_html h3:first-child,\n",
+       ".reveal .rendered_html h4:first-child,\n",
+       ".reveal .rendered_html h5:first-child {\n",
+       "    margin-top: 0.2em;\n",
+       "}\n",
+       "\n",
+       "/*\n",
+       ".CodeMirror-lines, .output_text {\n",
+       "    font-size: 1.5rem !important;\n",
+       "}\n",
+       "*/\n",
+       "\n",
+       "h1.plan, h2.plan, h3.plan {\n",
+       "    text-align: center;\n",
+       "    padding-bottom: 30px;\n",
+       "}\n",
+       "\n",
+       "ul.plan>li>span.plan-bold {\n",
+       "    font-size: 110%;\n",
+       "    padding: 4px;\n",
+       "    font-weight: bold;\n",
+       "    background-color: #eee;\n",
+       "}\n",
+       "\n",
+       "ul.plan>li>ul.subplan>li>span.plan-bold {\n",
+       "    font-weight: bold;\n",
+       "}\n",
+       "\n",
+       ".plan-strike {\n",
+       "    opacity: 0.4;\n",
+       "/*    text-decoration: line-through; */\n",
+       "}\n",
+       "\n",
+       "div.plan-container {\n",
+       "    display: grid;\n",
+       "    grid-template-columns: 50% 50%;\n",
+       "}\n",
+       "\n",
+       "/*\n",
+       " * this is to void xarray's html output to show the fallback textual representation\n",
+       " * see also\n",
+       "   * xarray.md and\n",
+       "   * https://github.com/damianavila/RISE/issues/594\n",
+       " */\n",
+       ".reveal pre.xr-text-repr-fallback {\n",
+       "    display: none;\n",
+       "}\n",
+       "\n",
+       "#toc-header, .toc-item li {\n",
+       "    margin: auto !important;\n",
+       "    color: #808080 !important;\n",
+       "}\n",
+       "\n",
+       "#toc, #toc-wrapper, .toc-item-num, #toc a, .toc {\n",
+       "    margin: auto !important;\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       "#toc-wrapper {\n",
+       "    top: auto !important;\n",
+       "    bottom: auto !important;\n",
+       "    margin-top: 2rem !important;\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       "\n",
+       "#rise-header {\n",
+       "    margin: 10px;\n",
+       "    left: 5%;\n",
+       "}\n",
+       "\n",
+       "#rise-footer {\n",
+       "    margin: 10px;\n",
+       "    right: 5%;\n",
+       "}\n",
+       "\n",
+       "#rise-backimage {\n",
+       "    opacity: 0.70;\n",
+       "}\n",
+       "\n",
+       ".reveal img {\n",
+       "    max-width: 100%;\n",
+       "}\n",
+       "\n",
+       "\n",
+       ".md-slide.title {\n",
+       "    position: relative;\n",
+       "    top: -50%;\n",
+       "    margin-left: 5%;\n",
+       "    font-size: 4em !important;\n",
+       "    line-height: 1.6;\n",
+       "}\n",
+       "</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
+   ],
+   "source": [
+    "%presentation_style"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "\n",
+    "%set_random_seed 12"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "\n",
+       "$\\newcommand{\\vect}[1]{{\\mathbf{\\boldsymbol{#1}} }}$\n",
+       "$\\newcommand{\\amax}{{\\text{argmax}}}$\n",
+       "$\\newcommand{\\P}{{\\mathbb{P}}}$\n",
+       "$\\newcommand{\\E}{{\\mathbb{E}}}$\n",
+       "$\\newcommand{\\R}{{\\mathbb{R}}}$\n",
+       "$\\newcommand{\\Z}{{\\mathbb{Z}}}$\n",
+       "$\\newcommand{\\N}{{\\mathbb{N}}}$\n",
+       "$\\newcommand{\\C}{{\\mathbb{C}}}$\n",
+       "$\\newcommand{\\abs}[1]{{ \\left| #1 \\right| }}$\n",
+       "$\\newcommand{\\simpl}[1]{{\\Delta^{#1} }}$\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%load_latex_macros"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from training_rl.offline_rl.custom_envs.custom_envs_registration import register_grid_envs\n",
@@ -40,6 +279,15 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "# Offline RL in Practice - Pt. 2"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Exercise"
@@ -66,12 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2023-11-24T16:32:29.915543Z",
-     "end_time": "2023-11-24T16:32:30.082588Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "ENV_NAME = CustomEnv.Grid_2D_8x8_discrete\n",
@@ -102,12 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2023-11-24T16:32:31.749744Z",
-     "end_time": "2023-11-24T16:32:31.754826Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "IDENTIFIER_COMBINED_DATASETS = \"_conservative_test\"\n",
@@ -135,12 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2023-11-24T16:32:32.869322Z",
-     "end_time": "2023-11-24T16:32:33.481293Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "config_combined_data = create_combined_minari_dataset(\n",
@@ -204,12 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2023-11-24T16:32:37.313786Z",
-     "end_time": "2023-11-24T16:32:37.318615Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# The model policy to be trained.\n",
@@ -236,13 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false,
-    "ExecuteTime": {
-     "start_time": "2023-11-24T16:32:39.722413Z",
-     "end_time": "2023-11-24T16:34:06.279972Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "NUM_EPOCHS = 20\n",
@@ -275,12 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2023-11-24T16:34:31.570542Z",
-     "end_time": "2023-11-24T16:34:31.616851Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "POLICY_FILE = \"policy_best_reward.pth\"\n",
@@ -320,12 +537,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 2:\n",
+    "## Exercise 2:\n",
     "\n",
     "a) Remove the obstacle. What do you think are going to be the results?\n",
     "\n",
     "b) Modify the parameters related to distributional shift in BCQ and CQL, and observe their impact on out-of-distribution behavior."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Final remarks"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Offline RL proves valuable in various scenarios, especially when:\n",
+    "\n",
+    "a. Robots require intelligent behavior in complex open-world environments demanding extensive training data due to robust visual perception requirements. (complex environment modeling and extensive data collection)\n",
+    "\n",
+    "b. Robot grasping tasks, which involve expert data that cannot be accurately simulated, providing an opportunity to assess our BCQ algorithm.\n",
+    "\n",
+    "c. Robotic navigation tasks, where offline RL aids in crafting effective navigation policies using real-world data.\n",
+    "\n",
+    "d. Autonomous driving, where ample expert data and an offline approach enhance safety.\n",
+    "\n",
+    "e. Healthcare applications, where safety is paramount due to the potential serious consequences of inaccurate forecasts.\n",
+    "\n",
+    "... and many more. \n",
+    "\n",
+    "However, if you have access to an environment with abundant data, online Reinforcement Learning (RL) can be a powerful choice due to its potential for exploration and real-time feedback. Nevertheless, the landscape of RL is evolving, and a data-centric approach is gaining prominence, exemplified by vast datasets like X-Embodiment. It's becoming evident that robots trained with diverse data across various scenarios tend to outperform those solely focused on specific tasks. Furthermore, leveraging multitask trained agents for transfer learning can be a valuable strategy for addressing your specific task at hand."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
