--- a/notebooks/nb_70_TrainingRLAgents.ipynb
+++ b/notebooks/nb_70_TrainingRLAgents.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "hide_input": true,
     "init_cell": true,
@@ -14,11 +14,7 @@
      "remove-output",
      "remove-input-nbconv",
      "remove-output-nbconv"
-    ],
-    "ExecuteTime": {
-     "end_time": "2023-11-26T23:56:04.430208235Z",
-     "start_time": "2023-11-26T23:56:03.267608423Z"
-    }
+    ]
    },
    "outputs": [],
    "source": [
@@ -32,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "hide_input": true,
     "init_cell": true,
@@ -42,19 +38,175 @@
     "tags": [
      "remove-input",
      "remove-input-nbconv"
-    ],
-    "ExecuteTime": {
-     "end_time": "2023-11-26T23:56:04.433355151Z",
-     "start_time": "2023-11-26T23:56:04.397407316Z"
-    }
+    ]
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<style>/*\nThis file is mainly copy-pasta from rise's examples\nhttps://github.com/damianavila/RISE/blob/master/examples/rise.css\nthat was further customized for appliedAI purposes\n*/\n@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400&display=swap');\n\n\n/*\nbody {\n    font-family: 'Work Sans', sans-serif !important;\n    text-transform: initial !important;\n    letter-spacing: initial !important;\n    font-weight: 400 !important;\n    line-height: 1.5 !important;\n    text-size-adjust: 100% !important;\n    ‑webkit‑text‑size‑adjust: 100% !important;\n}\n\n\n.reveal, div.text_cell_render, .md-slide, .sidebar-wrapper {\n    font-size: 1.5rem !important;\n}\n*/\n\n.navbar-default .navbar-nav > li > a {\n    color: #00747b !important;\n}\n\n.filename {\n    font-size: 2.4rem !important;\n    color: #212529 !important;\n    font-weight: 600 !important;\n}\n\n.reveal, .md-slide {\n    color: white !important;\n}\n\nh1, h2 {\n    color: #00747b !important;\n}\n\nh3, h4, h5, h6 {\n    color: #808080 !important;\n}\n\n.reveal p, .reveal ol, .reveal dl, .reveal ul,\ndiv.text_cell_render {\n    color: #212529 !important;\n}\n\n/*copied from stackoverflow, better spacing between list items*/\nli + li {\n  margin-top: 0.2em;\n}\n\nbody.rise-enabled .reveal ol, body.rise-enabled .reveal dl, body.rise-enabled .reveal ul {\n    margin-left: 0.1em;\n    margin-top: 0.2em;\n}\n\n.reveal .rendered_html h1:first-child,\n.reveal .rendered_html h2:first-child,\n.reveal .rendered_html h3:first-child,\n.reveal .rendered_html h4:first-child,\n.reveal .rendered_html h5:first-child {\n    margin-top: 0.2em;\n}\n\n/*\n.CodeMirror-lines, .output_text {\n    font-size: 1.5rem !important;\n}\n*/\n\nh1.plan, h2.plan, h3.plan {\n    text-align: center;\n    padding-bottom: 30px;\n}\n\nul.plan>li>span.plan-bold {\n    font-size: 110%;\n    padding: 4px;\n    font-weight: bold;\n    background-color: #eee;\n}\n\nul.plan>li>ul.subplan>li>span.plan-bold {\n    font-weight: bold;\n}\n\n.plan-strike {\n    opacity: 0.4;\n/*    text-decoration: line-through; */\n}\n\ndiv.plan-container {\n    display: grid;\n    grid-template-columns: 50% 50%;\n}\n\n/*\n * this is to void xarray's html output to show the fallback textual representation\n * see also\n   * xarray.md and\n   * https://github.com/damianavila/RISE/issues/594\n */\n.reveal pre.xr-text-repr-fallback {\n    display: none;\n}\n\n#toc-header, .toc-item li {\n    margin: auto !important;\n    color: #808080 !important;\n}\n\n#toc, #toc-wrapper, .toc-item-num, #toc a, .toc {\n    margin: auto !important;\n    color: #00747b !important;\n}\n\n#toc-wrapper {\n    top: auto !important;\n    bottom: auto !important;\n    margin-top: 2rem !important;\n    color: #00747b !important;\n}\n\n\n#rise-header {\n    margin: 10px;\n    left: 5%;\n}\n\n#rise-footer {\n    margin: 10px;\n    right: 5%;\n}\n\n#rise-backimage {\n    opacity: 0.70;\n}\n\n.reveal img {\n    max-width: 100%;\n}\n\n\n.md-slide.title {\n    position: relative;\n    top: -50%;\n    margin-left: 5%;\n    font-size: 4em !important;\n    line-height: 1.6;\n}\n</style>"
+      "text/html": [
+       "<style>/*\n",
+       "This file is mainly copy-pasta from rise's examples\n",
+       "https://github.com/damianavila/RISE/blob/master/examples/rise.css\n",
+       "that was further customized for appliedAI purposes\n",
+       "*/\n",
+       "@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400&display=swap');\n",
+       "\n",
+       "\n",
+       "/*\n",
+       "body {\n",
+       "    font-family: 'Work Sans', sans-serif !important;\n",
+       "    text-transform: initial !important;\n",
+       "    letter-spacing: initial !important;\n",
+       "    font-weight: 400 !important;\n",
+       "    line-height: 1.5 !important;\n",
+       "    text-size-adjust: 100% !important;\n",
+       "    ‑webkit‑text‑size‑adjust: 100% !important;\n",
+       "}\n",
+       "\n",
+       "\n",
+       ".reveal, div.text_cell_render, .md-slide, .sidebar-wrapper {\n",
+       "    font-size: 1.5rem !important;\n",
+       "}\n",
+       "*/\n",
+       "\n",
+       ".navbar-default .navbar-nav > li > a {\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       ".filename {\n",
+       "    font-size: 2.4rem !important;\n",
+       "    color: #212529 !important;\n",
+       "    font-weight: 600 !important;\n",
+       "}\n",
+       "\n",
+       ".reveal, .md-slide {\n",
+       "    color: white !important;\n",
+       "}\n",
+       "\n",
+       "h1, h2 {\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       "h3, h4, h5, h6 {\n",
+       "    color: #808080 !important;\n",
+       "}\n",
+       "\n",
+       ".reveal p, .reveal ol, .reveal dl, .reveal ul,\n",
+       "div.text_cell_render {\n",
+       "    color: #212529 !important;\n",
+       "}\n",
+       "\n",
+       "/*copied from stackoverflow, better spacing between list items*/\n",
+       "li + li {\n",
+       "  margin-top: 0.2em;\n",
+       "}\n",
+       "\n",
+       "body.rise-enabled .reveal ol, body.rise-enabled .reveal dl, body.rise-enabled .reveal ul {\n",
+       "    margin-left: 0.1em;\n",
+       "    margin-top: 0.2em;\n",
+       "}\n",
+       "\n",
+       ".reveal .rendered_html h1:first-child,\n",
+       ".reveal .rendered_html h2:first-child,\n",
+       ".reveal .rendered_html h3:first-child,\n",
+       ".reveal .rendered_html h4:first-child,\n",
+       ".reveal .rendered_html h5:first-child {\n",
+       "    margin-top: 0.2em;\n",
+       "}\n",
+       "\n",
+       "/*\n",
+       ".CodeMirror-lines, .output_text {\n",
+       "    font-size: 1.5rem !important;\n",
+       "}\n",
+       "*/\n",
+       "\n",
+       "h1.plan, h2.plan, h3.plan {\n",
+       "    text-align: center;\n",
+       "    padding-bottom: 30px;\n",
+       "}\n",
+       "\n",
+       "ul.plan>li>span.plan-bold {\n",
+       "    font-size: 110%;\n",
+       "    padding: 4px;\n",
+       "    font-weight: bold;\n",
+       "    background-color: #eee;\n",
+       "}\n",
+       "\n",
+       "ul.plan>li>ul.subplan>li>span.plan-bold {\n",
+       "    font-weight: bold;\n",
+       "}\n",
+       "\n",
+       ".plan-strike {\n",
+       "    opacity: 0.4;\n",
+       "/*    text-decoration: line-through; */\n",
+       "}\n",
+       "\n",
+       "div.plan-container {\n",
+       "    display: grid;\n",
+       "    grid-template-columns: 50% 50%;\n",
+       "}\n",
+       "\n",
+       "/*\n",
+       " * this is to void xarray's html output to show the fallback textual representation\n",
+       " * see also\n",
+       "   * xarray.md and\n",
+       "   * https://github.com/damianavila/RISE/issues/594\n",
+       " */\n",
+       ".reveal pre.xr-text-repr-fallback {\n",
+       "    display: none;\n",
+       "}\n",
+       "\n",
+       "#toc-header, .toc-item li {\n",
+       "    margin: auto !important;\n",
+       "    color: #808080 !important;\n",
+       "}\n",
+       "\n",
+       "#toc, #toc-wrapper, .toc-item-num, #toc a, .toc {\n",
+       "    margin: auto !important;\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       "#toc-wrapper {\n",
+       "    top: auto !important;\n",
+       "    bottom: auto !important;\n",
+       "    margin-top: 2rem !important;\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       "\n",
+       "#rise-header {\n",
+       "    margin: 10px;\n",
+       "    left: 5%;\n",
+       "}\n",
+       "\n",
+       "#rise-footer {\n",
+       "    margin: 10px;\n",
+       "    right: 5%;\n",
+       "}\n",
+       "\n",
+       "#rise-backimage {\n",
+       "    opacity: 0.70;\n",
+       "}\n",
+       "\n",
+       ".reveal img {\n",
+       "    max-width: 100%;\n",
+       "}\n",
+       "\n",
+       "\n",
+       ".md-slide.title {\n",
+       "    position: relative;\n",
+       "    top: -50%;\n",
+       "    margin-left: 5%;\n",
+       "    font-size: 4em !important;\n",
+       "    line-height: 1.6;\n",
+       "}\n",
+       "</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
      },
-     "execution_count": 2,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "hide_input": true,
     "init_cell": true,
@@ -77,11 +229,7 @@
      "remove-output",
      "remove-input-nbconv",
      "remove-output-nbconv"
-    ],
-    "ExecuteTime": {
-     "end_time": "2023-11-26T23:56:06.022148692Z",
-     "start_time": "2023-11-26T23:56:04.410836798Z"
-    }
+    ]
    },
    "outputs": [],
    "source": [
@@ -92,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "hide_input": true,
     "init_cell": true,
@@ -102,17 +250,27 @@
     "tags": [
      "remove-input-nbconv",
      "remove-cell"
-    ],
-    "ExecuteTime": {
-     "end_time": "2023-11-26T23:56:06.042304920Z",
-     "start_time": "2023-11-26T23:56:06.019350431Z"
-    }
+    ]
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "<IPython.core.display.Markdown object>",
-      "text/markdown": "\n$\\newcommand{\\vect}[1]{{\\mathbf{\\boldsymbol{#1}} }}$\n$\\newcommand{\\amax}{{\\text{argmax}}}$\n$\\newcommand{\\P}{{\\mathbb{P}}}$\n$\\newcommand{\\E}{{\\mathbb{E}}}$\n$\\newcommand{\\R}{{\\mathbb{R}}}$\n$\\newcommand{\\Z}{{\\mathbb{Z}}}$\n$\\newcommand{\\N}{{\\mathbb{N}}}$\n$\\newcommand{\\C}{{\\mathbb{C}}}$\n$\\newcommand{\\abs}[1]{{ \\left| #1 \\right| }}$\n$\\newcommand{\\simpl}[1]{{\\Delta^{#1} }}$\n"
+      "text/markdown": [
+       "\n",
+       "$\\newcommand{\\vect}[1]{{\\mathbf{\\boldsymbol{#1}} }}$\n",
+       "$\\newcommand{\\amax}{{\\text{argmax}}}$\n",
+       "$\\newcommand{\\P}{{\\mathbb{P}}}$\n",
+       "$\\newcommand{\\E}{{\\mathbb{E}}}$\n",
+       "$\\newcommand{\\R}{{\\mathbb{R}}}$\n",
+       "$\\newcommand{\\Z}{{\\mathbb{Z}}}$\n",
+       "$\\newcommand{\\N}{{\\mathbb{N}}}$\n",
+       "$\\newcommand{\\C}{{\\mathbb{C}}}$\n",
+       "$\\newcommand{\\abs}[1]{{ \\left| #1 \\right| }}$\n",
+       "$\\newcommand{\\simpl}[1]{{\\Delta^{#1} }}$\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
      },
      "metadata": {},
      "output_type": "display_data"
@@ -131,7 +289,7 @@
    },
    "source": [
     "<img src=\"_static/images/aai-institute-cover.svg\" alt=\"Snow\" style=\"width:100%;\">\n",
-    "<div class=\"md-slide title\">Include title and greeting with divs</div>"
+    "<div class=\"md-slide title\">Training RL Agents </div>"
    ]
   },
   {
@@ -156,23 +314,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-26T23:56:21.418951424Z",
-     "start_time": "2023-11-26T23:56:21.388038633Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The tensorboard extension is already loaded. To reload it, use:\n",
-      "  %reload_ext tensorboard\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%load_ext tensorboard\n",
     "\n",
@@ -194,22 +338,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-26T23:56:26.204074047Z",
-     "start_time": "2023-11-26T23:56:24.043625888Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "Launching TensorBoard..."
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%tensorboard --logdir log --host localhost"
    ]
@@ -734,7 +865,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env = get_pendulum_env()\n",
+    "env = get_pendulum_env(render_mode=\"rgb_array\")\n",
     "\n",
     "\n",
     "demo_model(env, policy.compute_action, num_steps=400)"
